$Id$

6.x-1.1 release
===============
- [#848990] by rfay: Add feeds integration for ASIN field. Sponsored by Bobastream, LLC. Thanks!

6.x-1.0 release
===============
- [#736624] by rfay, joetan: Fix uninitialized variable warning (D6)

6.x-1.x-RC4 release
===================
- [#671686] by rfay: Fixed Amazon module localization errors.
- [#609448] by rfay: Added rel="nofollow" to detailpageurl links
- [#609448] by rfay: Added Feature: Add customer reviews and ratings to Amazon information retrieved.
- [#556414] by rfay, stratosgear: Provide Amazon.com price or lowest price or both.
- [#697138] by robertDouglass: Added Drupal alter $params before searching in amazon_search so that modules can customize search.
- [#288577] by rfay, reprise: Add 13-digit ISBN/EAN support to the admin test


6.x-1.x-RC3 release
===================
- [#288577] by rfay, tirsales, mleicester: Added 13 digit ISBNs / EAN support / converting to ASINs.
            With this patch, both EANs (ISBN-13) and Amazon.com/co.uk/de, etc. links can be used in
            either a CCK field or an Amazon filter. Also, hyphens are ignored in the input, so you can
            use a classically formatted ISBN-10 or ISBN-13.
- [#679860] by rfay:  User with 'administer amazon' permissions can not access ./admin/settings/amazon/test.
- [#350320] by rfay: Fix Display of &amp;amp; (and possibly other special chars) isn't handled correctly. (Again)
- [#231612] by rfay: Fix upgrade path from D5 ASIN module. Also add upgrade path
                     for AAT links and amazon nodes (which are the same thing)
- [#608784] by rfay: Better filter tips in amazon_filter module.
- [#590360] by rfay: Postgresql compatibility fix.

6.x-1.x-RC2 release
=====================
- #661560 by rfay: PHP 5.3 compatibility fix
- #660670 by rfay: Remove option of using author's Amazon associate ID.
- #609388 by rfay: Make Amazon item title sortable in views, check other fields.