@@ -20,3 +20,8 @@ div.amazon-item div {
   margin-left: 100px;
   height: 4em;
 }
+
+#edit-amazon-default-image-wrapper {
+  padding-left: 10px;
+  display: inline-block;
+}
