@@ -1,5 +1,9 @@
 $Id$
 
+6.x-1.2 release
+===============
+- [#869286] by rfay: Add a configurable default image. Sponsored by fortmifflin.com - Thanks!
+
 6.x-1.1 release
 ===============
 - [#848990] by rfay: Add feeds integration for ASIN field. Sponsored by Bobastream, LLC. Thanks!
